2007-01-19  Chris Toshok  <toshok@ximian.com>

	* VisualStyleElement.cs: rename TaskBar to Taskbar, and
	TaskBarClock to TaskbarClock to make corcompare happy.

2006-08-05  Jonathan Pobst <monkey@jpobst.com>
	* TextMetrics.cs: Change variables to properties.
	* VisualStyleRenderer.cs, EdgeEffects.cs, Edges.cs,
	  HitTestOptions.cs, TextMetricsPitchAndFamilyValues.cs:
	    Add various attributes.
	* TabItemState.cs, TextBoxState.cs, TrackBarThumbState.cs:
	    Fix typos.

2006-08-04  Jonathan Pobst <monkey@jpobst.com>
	* VisualStyleRenderer.cs: Fixed null compare that broke the build.

2006-08-04  Jonathan Pobst <monkey@jpobst.com>
	* System.Windows.Forms.VisualStyles: Initial import.