@@ -424,6 +424,17 @@ namespace System.Windows.Forms {
 	internal struct POINT {
 		internal int x;
 		internal int y;
+
+		internal POINT (int x, int y)
+		{
+			this.x = x;
+			this.y = y;
+		}
+
+		internal Point ToPoint ()
+		{
+			return new Point (x, y);
+		}
 	}
 	
 	[StructLayout(LayoutKind.Sequential)] 
