@@ -1,3 +1,9 @@
+2007-02-26  Jonathan Pobst  <monkey@jpobst.com>
+
+	* UXTheme.cs: Remove RECT, POINT, and TEXTMETRICS structures,
+	use ones from Xplat instead.
+	* VisualStyleRenderer.cs: Use Xplat structs instead of UXTheme ones.
+
 2007-01-19  Chris Toshok  <toshok@ximian.com>
 
 	* VisualStyleElement.cs: rename TaskBar to Taskbar, and
